# discord-wikipedia

./: .dockerignore  .envrc  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Makefile.toml  README.md  commands.json  docker-compose.yml  upload_command.sh
.cargo/: config.toml
.github/workflows/: deploy.yml  tests.yml
src/: commands.rs  config.rs  headers.rs  main.rs  wikipedia.rs
src/commands/: article.rs
src/wikipedia/: page_summary.rs  search.rs
