[package]
name = "rust-template"
version = "0.1.0"
edition = "2021"
authors = ["Carter Himmel <me@fyko.net>"]
license = "MIT"

[dependencies]
tokio = { version = "1.34.0", features = [
  "macros",
  "rt-multi-thread",
  "io-util",
  "fs",
  "sync",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = [
  "fmt",
  "env-filter",
  "json",
] }
reqwest = { version = "0.11.22", features = [
  "rustls-tls-webpki-roots",
  "json",
] }
envy = "0.4.2"
anyhow = "1.0.75"
once_cell = "1.18.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
